Style and naming conventions, fixed cases where IDs were used on HTML elements inappropriately, consolidated styles, moved event handler code into codebehind, documentation
git-tfs-work-item:1357 associate
git-tfs-id: [http://tfs.etg-inc.net:8080/tfs/Engage%20TFS%202010]$/Engage Rotator;C2421

--- a/Source/module.css
+++ b/Source/module.css
@@ -24,8 +24,6 @@
 wbr:after { content: "\00200B" }
 .TitleTextBox{width: 90%;}
 #editContent {overflow: auto; border-top: 1px #ccc solid; padding: 10px 0;}
-#divArticleToRotate{overflow: auto; text-align: left; margin: 10px 0 20px 0;}
-#divArticleToRotate p{ text-align: left;}
 
 
 
@@ -59,40 +57,46 @@ wbr:after { content: "\00200B" }
 		.rotatorControlsNextLink{background: transparent url(images/next.gif) no-repeat; height: 6px; width: 16px; cursor: pointer;}
 
 #rotatorContentDescriptionWrapper{padding: 10px 0;}
-#topRotatorHeader{overflow: auto; width: 720px;}
+
+
+
+
+	
+/******** Main Rotator Display **********/
+.RotatorBody {overflow:hidden;}
+
+/******** Rotator Options (Add/Edit List) ************/
+.divArticleToRotate{overflow: auto; text-align: left; margin: 10px 0 20px 0;}
+.divArticleToRotate p{ text-align: left;}
+
+.topRotatorHeader{overflow: auto; width: 720px;}
 	.lt-corner{background: url(images/lt-corner.gif) no-repeat left top; height: 30px; width: 10px; float: left;}
 	.rotatorHeaderWrapper{background: url(images/top-header-bg.gif) repeat-x left top; height: 30px; float:left; width:700px;}
 		.sortOrder{float: left; width: 120px; padding: 5px 0;}
 		.RotatorOptions .rotatorContentTitleWrapper{float: left; padding: 4px 0;}
 	.rt-corner{background: url(images/rt-corner.gif) no-repeat right top; height: 30px; width: 10px; float: left;}
 
-.RotatorOptions #rotatorContent {overflow: auto; border-left: 1px #8fb9d0 solid; border-right: 1px #8fb9d0 solid; padding: 15px 10px; width: 698px}
-	* html #rotatorContent{ height: 100%;}
-	.rotatorDescription {float: left; width:50%; margin-right: 10px;}
-		.RotatorOptions .rotatorDescriptionTitle{border-bottom: 1px #8fb9d0 solid; padding: 10px 0;}
-	.rotatorThumbnail, .rotatorPositionThumbnail{padding: 10px 0;}
-		.rotatorThumbnailWrapper{float: left; padding-right: 20px;}
-		.rotatorPositionThumbnailWrapper{float: left;}
-
-
-#rotatorThumbnails {float: right; text-align: left; width: 48%;}
-	.rotatorThumbnailTitle{border-bottom: 1px #8fb9d0 solid; padding: 10px 0;}
-	.rotatorPositionThumbnailTitle{border-bottom: 1px #8fb9d0 solid; padding: 10px 0;}
-
-#rotatorReadMoreLinkWrapper{border-left: 1px #8fb9d0 solid; border-right: 1px #8fb9d0 solid;}
-	.rotatorReadMoreLink{}
-
-
-
-#bottomRotatorHeader{overflow: auto; width: 720px;}
+.bottomRotatorHeader{overflow: auto; width: 720px;}
 	.lb-corner{background: url(images/lb-corner.gif) no-repeat left top; height: 45px; width: 10px; float: left;}
 	.editContent {background: url(images/bottom-header-bg.gif) repeat-x left top; height: 45px; float: left; width: 700px;}
 		.startEndDate{float: left; width: 50%; padding: 10px 0;}
 		.editButtons {float: right; width: 50%; padding: 10px 0; text-align: right;}
 	.rb-corner{background: url(images/rb-corner.gif) no-repeat right top; height: 45px; width: 10px; float: left;}
+
+.RotatorOptions .rotatorContent {overflow: auto; border-left: 1px #8fb9d0 solid; border-right: 1px #8fb9d0 solid; padding: 15px 10px; width: 698px}
+	* html .RotatorOptions #rotatorContent{ height: 100%;}
+	.RotatorOptions .rotatorDescription {float: left; width:50%; margin-right: 10px;}
+		.rotatorDescriptionTitle{border-bottom: 1px #8fb9d0 solid; padding: 10px 0;}
+	.RotatorOptions .rotatorThumbnail, .rotatorPositionThumbnail{padding: 10px 0;}
+		.RotatorOptions .rotatorThumbnailWrapper{float: left; padding-right: 20px;}
+		.rotatorPositionThumbnailWrapper{float: left;}
+
+.rotatorThumbnails {float: right; text-align: left; width: 48%;}
+	.rotatorThumbnailTitle{border-bottom: 1px #8fb9d0 solid; padding: 10px 0;}
+	.rotatorPositionThumbnailTitle{border-bottom: 1px #8fb9d0 solid; padding: 10px 0;}
 	
-	
-.RotatorBody {overflow:hidden;}
+.RotatorOptions .rotatorReadMoreLinkWrapper{border-left: 1px #8fb9d0 solid; border-right: 1px #8fb9d0 solid;}
+
 
 /*
  * jQuery UI screen structure and presentation
